optimize for graalvm